--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Lili Crochê Decor</h1>
         <button id="menu-toggle" aria-label="Abrir menu">☰</button>
         <nav id="nav-menu" aria-label="Menu principal">
-            <a href="lar.html">Lar</a>
+            <a href="index.html">Lar</a>
             <a href="produtos.html">Produtos</a>
             <a href="dicas.html">Dicas</a>
             <a href="sobre.html">Sobre</a>
