--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
         <h1>Lili Crochê Decor</h1>
         <button id="menu-toggle">☰</button>
         <nav id="nav-menu">
-            <a href="lar.html">Lar</a>
+            <a href="index.html">Lar</a>
             <a href="produtos.html">Produtos</a>
             <a href="dicas.html">Dicas</a>
             <a href="sobre.html">Sobre</a>
