--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <p>A Lili Crochê Decor é especializada em criar peças únicas...</p>
             
             <div class="carrossel-principal">
-                <div><img src="Imagensoriginais/decoracao2souplatrosaclaro800x800.webp" alt="Crochê decorativo"></div>
-                <div><img src="Imagensoriginais/decoracaosouplatcru800x800.webp" alt="Produtos de crochê"></div>
-                <div><img src="Imagensoriginais/decoracaosouplatrosaclaro800x800.webp" alt="Ambiente decorado"></div>
+                <div><img src="" alt="Crochê decorativo"></div>
+                <div><img src="Imagens/decoracaosouplatcru800x800.webp" alt="Produtos de crochê"></div>
+                <div><img src="Imagens/decoracaosouplatrosaclaro800x800.webp" alt="Ambiente decorado"></div>
             </div>
         </section>
     </main>
