Ajustei HTML+CSS, adicionei novas imagens.

--- a/dicas.html
+++ b/dicas.html
@@ -14,13 +14,13 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo-title">
-            <img src="Imagensoriginais/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
+            <img src="Imagens/icones/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
         </div>
         <h1>Lili Crochê Decor</h1>
         <button id="menu-toggle">☰</button>
         <nav id="nav-menu">
             <a href="index.html">Lar</a>
-            <a href="produtos.html">Produtos</a>
+           <!--<a href="produtos.html">Produtos</a>-->
             <a href="dicas.html">Dicas</a>
             <a href="sobre.html">Sobre</a>
             <a href="faleconosco.html">Fale Conosco</a>
@@ -34,7 +34,7 @@
             <div class="carrossel-dicas">
                 <!-- Dica 1 -->
                 <div class="dica">
-                    <img src="Imagensoriginais/decoracaosouplatverdmilitardourado800x900.webp" alt="Decoração com crochê">
+                    <img src="Imagens/mesadecoracaosouplatazulbb800x800.jpg" alt="Decoração com crochê">
                     <div class="dica-conteudo">
                         <h3>Use peças de crochê para decorar sua casa</h3>
                         <p>Peças como jogos americanos, capas de almofadas e cortinas de crochê podem trazer um charme especial para qualquer ambiente.</p>
@@ -43,7 +43,7 @@
 
                 <!-- Dica 2 -->
                 <div class="dica">
-                    <img src="Imagensoriginais/decoracaosouplatvermelho800x800.webp" alt="Combinação de cores e texturas">
+                    <img src="Imagens/mesadecoracaosouplatrosabb800x800.jpg" alt="Combinação de cores e texturas">
                     <div class="dica-conteudo">
                         <h3>Combine cores e texturas</h3>
                         <p>Escolha fios com cores que combinem com a paleta do seu ambiente e misture texturas para criar um visual mais interessante.</p>
@@ -52,7 +52,7 @@
 
                 <!-- Dica 3 -->
                 <div class="dica">
-                    <img src="Imagensoriginais/dicasdedecoracaoamarelo800x800.webp" alt="Peças temáticas de crochê">
+                    <img src="Imagens/mesadecoracaosouplatsalmao800x800.jpg" alt="Peças temáticas de crochê">
                     <div class="dica-conteudo">
                         <h3>Peças temáticas para ocasiões especiais</h3>
                         <p>Para festas e datas comemorativas, cobre mesas e decore paredes com peças temáticas de crochê, como guirlandas e enfeites.</p>
