--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo-title">
-            <img src="Imagens/logolilicroche500px.png" alt="Logo Lili Crochê Decor" class="logo">
+            <img src="Imagens/icones/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
             
         </div>
         <h1>Lili Crochê Decor</h1>
         <button id="menu-toggle" aria-label="Abrir menu">☰</button>
         <nav id="nav-menu" aria-label="Menu principal">
             <a href="index.html">Lar</a>
-            <a href="produtos.html">Produtos</a>
+            <!--<a href="produtos.html">Produtos</a>-->
             <a href="dicas.html">Dicas</a>
             <a href="sobre.html">Sobre</a>
             <a href="faleconosco.html">Fale Conosco</a>
@@ -41,12 +41,30 @@
             <p>A Lili Crochê Decor é especializada em criar peças únicas...</p>
             
             <div class="carrossel-principal">
-                <div><img src="" alt="Crochê decorativo"></div>
+                <div><img src="Imagens/decoracao2souplatrosaclaro800x800.webp" alt="Crochê decorativo"></div>
                 <div><img src="Imagens/decoracaosouplatcru800x800.webp" alt="Produtos de crochê"></div>
                 <div><img src="Imagens/decoracaosouplatrosaclaro800x800.webp" alt="Ambiente decorado"></div>
+                <div><img src="Imagens/decoracaosouplatverde800x800.webp" alt="Ambiente decorado"></div>
             </div>
+            <h1>Vejam Nossos Produto em Crochê</h1>
+            <p>🧶✨ Encante-se com Nossos Produtos em Crochê – Feitos com Amor e Dedicação! ✨🧶</p>
         </section>
     </main>
+    <!-- Links para Lojas -->
+    <section class="lojas">
+        <h2>Compre Nossos Produtos</h2>
+        <div class="lojas-links">
+            <a href="#">
+                <img src="Imagens/mercadolivre.ico" alt="Mercado Livre">
+                <p>Compre no Mercado Livre</p>
+            </a>
+            <a href="#">
+                <img src="Imagens/elo71.ico" alt="Elo7">
+                <p>Compre no Elo7</p>
+            </a>
+        </div>
+    </section>
+</main>
 
     <!-- Rodapé -->
     <footer>
