--- a/faleconosco.html
+++ b/faleconosco.html
@@ -25,7 +25,7 @@
         <button id="menu-toggle">☰</button>
         <nav id="nav-menu">
             <a href="index.html">Lar</a>
-            <a href="produtos.html">Produtos</a>
+            <!--<a href="produtos.html">Produtos</a>-->
             <a href="dicas.html">Dicas</a>
             <a href="sobre.html">Sobre</a>
             <a href="faleconosco.html">Fale Conosco</a>
