--- a/sobre.html
+++ b/sobre.html
@@ -14,13 +14,13 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo-title">
-            <img src="Imagensoriginais/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
+            <img src="Imagens/icones/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
         </div>
         <h1>Lili Crochê Decor</h1>
         <button id="menu-toggle">☰</button>
         <nav id="nav-menu">
             <a href="index.html">Lar</a>
-            <a href="produtos.html">Produtos</a>
+            <!--<a href="produtos.html">Produtos</a>-->
             <a href="dicas.html">Dicas</a>
             <a href="sobre.html">Sobre</a>
             <a href="faleconosco.html">Fale Conosco</a>
