Colocando Imagens ico

--- a/faleconosco.html
+++ b/faleconosco.html
@@ -6,7 +6,7 @@
     <title>Lili Crochê Decor - Fale Conosco</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="Imagens/lililogoic1.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagens/icones/lililogoic1.ico" type="image/x-icon">
     <!-- Slick Carousel CSS -->
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -18,7 +18,7 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo-title">
-            <img src="Imagensoriginais/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
+            <img src="Imagens/icones/logolilicroche.png" alt="Logo Lili Crochê Decor" class="logo">
             
         </div>
         <h1>Lili Crochê Decor</h1>
