--- a/dicas.html
+++ b/dicas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lili Crochê Decor - Dicas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Imagens/lililogoic1.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagens/icones/lililogoic1.ico" type="image/x-icon">
     <!-- Slick Carousel CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
