--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Compre Nossos Produtos</h2>
         <div class="lojas-links">
             <a href="#">
-                <img src="Imagens/mercadolivre.ico" alt="Mercado Livre">
+                <img src="Imagens/mercadolivre.ico" alt="">
                 <p>Compre no Mercado Livre</p>
             </a>
             <a href="#">
