--- a/dicas.html
+++ b/dicas.html
@@ -73,30 +73,7 @@
         </p>
     </footer>
 
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('.carrossel-dicas').slick({
-                dots: true,
-                arrows: true,
-                infinite: true,
-                speed: 300,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 5000,
-                responsive: [
-                    {
-                        breakpoint: 768,
-                        settings: {
-                            arrows: false
-                        }
-                    }
-                ]
-            });
-        });
-    </script>
+    <!-- Script -->
+    <script src="script.js"></script>
 </body>
 </html>
