--- a/faleconosco.html
+++ b/faleconosco.html
@@ -100,8 +100,8 @@
             <!-- Redes Sociais -->
             <div class="redes-sociais">
                 <h3>Siga-nos nas Redes Sociais</h3>
-                <a href="https://www.instagram.com/lilicrochedecor/?hl=pt-br" target="_blank"><img src="Imagens/icones/intagramico.ico" alt="Instagram"></a>
-                <a href="https://br.pinterest.com/lili_croche_decor/_created/" target="_blank"><img src="Imagens/icones/pinterest_icon-icons.com_53605 (1).ico" alt="Pinterest"></a>
+                <a href="https://www.instagram.com/lilicrochedecor/?hl=pt-br" target="_blank" rel="noopener noreferrer"><img src="Imagens/icones/intagramico.ico" alt="Instagram"></a>
+                <a href="https://br.pinterest.com/lili_croche_decor/_created/" target="_blank" rel="noopener"><img src="Imagens/icones/pinterest_icon-icons.com_53605 (1).ico" alt="Pinterest"></a>
                 <a href="#" target="_blank"><img src="Imagens/icones/whatsapicon.ico" alt="WhatsApp"></a>
             </div>
         </section>
