--- a/sobre.html
+++ b/sobre.html
@@ -77,10 +77,16 @@
     <footer>
         <p>&copy; 2023 Lili Crochê Decor. Todos os direitos reservados.</p>
         <p>Siga-nos nas redes sociais: 
-            <a href="https://www.instagram.com/lilicrochedecor/?hl=pt-br">Instagram</a> | 
-            <a href="https://br.pinterest.com/lili_croche_decor/_created/">Pinterest</a>
+            <a href="https://www.instagram.com/lilicrochedecor/?hl=pt-br" class="social-link" target="_blank">Instagram
+                <img src="Imagens/icones/intagramico.ico" alt="Instagram" class="social-icon">
+            </a> | 
+            <a href="https://br.pinterest.com/lili_croche_decor/_created/" target="_blank">Pinterest
+                <img src="Imagens/icones/pinterest_icon-icons.com_53605 (1).ico" alt="Pinterest" class="social-icon">
+            </a>
+            </a>
         </p>
     </footer>
+
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
