--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <h2>Compre Nossos Produtos</h2>
         <div class="lojas-links">
             <a href="#">
-                <img src="Imagens/mercadolivre.ico" alt="">
-                <p>Compre no Mercado Livre</p>
+                <img src="Imagens/minilogo.png" alt="">
+                <p>Compre</p>
             </a>
             <a href="#">
-                <img src="Imagens/elo71.ico" alt="Elo7">
-                <p>Compre no Elo7</p>
+                <img src="Imagens/minilog1.png" alt="Elo7">
+                <p>Compre</p>
             </a>
         </div>
     </section>
